Version 0.5 -- Subversion
-----------------

* Added page aliases
* Added htaccess file to make pretty page aliases
* Added new admin stylesheet (Bewbs)
* Added new admin icons (Graeme)
* Added file manager
* Added phpdoc strings to many files and functions
* Added ability for module's adminexecute function to use the wysiwyg
* Changed inner workings so that code is easier to 
understand.  We now pass one global object around and put important 
variables and objects inside it.  Makes the code very consistent.
* Fixed modules to respect the installed and active flags
* Removed lots of NOTICE level errors

Version 0.4.1 -- Fri Aug 13 2004
-----------------

* Added template copying functionality (Fixes #39)
* Added checks to make sure Template titles can't be reused
* Added function to set template to every page (Fixes #42)
* Added config flag for turning on smarty's {php} tags (Fixes #47)
* Added config flag for setting preview tmp file location (Fixes #36)
* Fixed redirection bugs in the news module
* Fixed a bug in adding a group
* Fixed a bug where mysql imports would not work because of spaces at the
end of lines (Knaldgas)
* Fixed another bug with mysql import...  this time with magic_quotes_runtime
* Fixed several warnings and notices in later php versions
* Fixed all call_user_func_array calls to pass by value, ref is deprecated
in later php versions
* Removed the section permissions in new installs (Fixes #41)
* Removed all instances of the now() function -- for sql independence

Version 0.4 -- Tue Aug 10 2004
-----------------

* Added module API
* Added news module
* Added comments module
* Added copyright notice to bottom on all generated pages in a comment
* Added dhtml menu plugin using phplayers
* Added hierarchical content
* Fixed modified_date plugin
* Fixed several bugs with permissions
* Removed sections.  Instead we have content be children of other content
* Rewrote plugin loading so that plugins do not cache, even thought static
content does